--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "outputDirectory": ".",
   "headers": [
     {
+      "source": "",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
