--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,15 @@
   "name": "freetrader-act",
   "buildCommand": "echo 'No build required'",
   "outputDirectory": ".",
+  "routes": [
+    {
+      "src": "/api/.*",
+      "status": 403
+    }
+  ],
   "headers": [
     {
-      "source": "",
+      "source": "/api/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
